Fixed Instructor alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,3 +72,11 @@
 //     background-repeat: no-repeat;
 //     min-height: 50em;
 // }
+
+
+
+// TESTING
+.bd-highlight{
+background-color: rgba(86, 61, 124, 0.15);
+border: 1px solid rgba(86, 61, 124, 0.15);
+}
